[package]
name = "marinade-crank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.27.0"
anchor-lang = "0.27.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
cron = "0.12.1"
marinade-client-rs = { git = "https://github.com/marinade-finance/marinade-common-rs-cli" }
solana-sdk = "1.14.18"
tokio = "1.37.0"
actix-web = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.8.0"


[[bin]]
name = "marinade-crank"
